# uataq

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: docs.yml  quality.yml  tests.yml
docs/: columns.md  conf.py  filesystem.rst  general.rst  index.rst  installation.rst  instruments.rst  quickstart.rst
docs/source/: config.rst  filesystem.rst  index.rst  laboratory.rst  sites.rst
src/uataq/: __init__.py  _laboratory.py  _vprint.py  errors.py  instruments.py  network.py  sites.py  timerange.py
src/uataq/filesystem/: __init__.py  core.py
src/uataq/filesystem/groupspaces/: __init__.py  horel.py  lin.py
tests/: __init__.py  conftest.py  test_errors.py  test_filesystem.py  test_instruments.py  test_network.py  test_pkg.py  test_sites.py  test_timerange.py
